# lead-qualifier

./: .env.example  .gitignore  Dockerfile  PITCH.md  PLANO_IMPLEMENTACAO.md  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
.claude/: settings.json
backend/: auth.py  config.py  database.py  main.py  models.py  qr_store.py
backend/agents/: followup.py  qualification.py  response.py
backend/routers/: auth_router.py  campaigns.py  channels.py  config_router.py  documents.py  leads.py  webhooks.py
backend/services/: campaign_sender.py  email_service.py  evolution.py  rag.py  scheduler.py
frontend/: campaigns.html  channels.html  dashboard.html  index.html  lead.html  settings.html
frontend/static/js/: api.js
tests/: conftest.py  test_agents.py  test_auth.py  test_campaigns.py  test_channels_extra.py  test_config.py  test_documents.py  test_leads.py  test_rag.py  test_webhooks.py
